welcome.lessons.welcome.bat.bool2.TeaParty.scala.error
teaParty:4: error: not a legal formal parameter
		if(tea => 2*candy || candy => 2*tea)
                                  ^